// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly ellipse 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g multiple selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly g single selection 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly image 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Replace With..."
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="replace_with"
        type="button"
      >
        <ReplaceIcon />
        Replace With...
      </button>
    </div>
    <div
      className="btn-container half"
      key="Trace"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="trace"
        type="button"
      >
        <TraceIcon />
        Trace
      </button>
    </div>
    <div
      className="btn-container half"
      key="Grading"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="grading"
        type="button"
      >
        <GrayscaleIcon />
        Grading
      </button>
    </div>
    <div
      className="btn-container half"
      key="Sharpen"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="sharpen"
        type="button"
      >
        <SharpenIcon />
        Sharpen
      </button>
    </div>
    <div
      className="btn-container half"
      key="Crop"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="crop"
        type="button"
      >
        <CropIcon />
        Crop
      </button>
    </div>
    <div
      className="btn-container half"
      key="Bevel"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="bevel"
        type="button"
      >
        <BevelIcon />
        Bevel
      </button>
    </div>
    <div
      className="btn-container half"
      key="Invert"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="invert"
        type="button"
      >
        <InvertIcon />
        Invert
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly line 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly no elements 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  />
</div>
`;

exports[`should render correctly path 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="edit_path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="edit_path"
        type="button"
      >
        <PenIcon />
        edit_path
      </button>
    </div>
    <div
      className="btn-container full"
      key="Decompose"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="decompose_path"
        type="button"
      >
        <DivideIcon />
        Decompose
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
    <div
      className="btn-container full"
      key="simplify"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="simplify"
        type="button"
      >
        <SimplifyIcon />
        simplify
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly polygon 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly rect 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Offset"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="offset"
        type="button"
      >
        <OffsetIcon />
        Offset
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly text 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container full"
      key="Convert to Path"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="convert_to_path"
        type="button"
      >
        <TraceIcon />
        Convert to Path
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;

exports[`should render correctly use 1`] = `
<div
  className="actions-panel"
>
  <div
    className="title"
  >
    ACTIONS
  </div>
  <div
    className="btns-container"
  >
    <div
      className="btn-container half"
      key="Disassemble"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="disassemble_use"
        type="button"
      >
        <SeparateIcon />
        Disassemble
      </button>
    </div>
    <div
      className="btn-container half"
      key="Array"
      onClick={[Function]}
    >
      <button
        className="btn btn-default"
        id="array"
        type="button"
      >
        <ArrayIcon />
        Array
      </button>
    </div>
  </div>
</div>
`;
